--- a/style.css
+++ b/style.css
@@ -3,3 +3,51 @@ html, body {
     padding: 0;
     overflow: hidden;
 }
+
+#game {
+    z-index: 1;
+}
+
+#buttons {
+    z-index: 2;
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#buttons button {
+    background-color: #585b70;
+    color: #cdd6f4;
+    font-family: "Jetbrains Mono", monospace;
+    border: 2px solid #a6adc8;
+    padding: 10px;
+    border-radius: 6px;
+    width: 75px;
+    cursor: pointer;
+    transition: 100ms background-color;
+}
+
+#world-sizes button:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: none;
+}
+
+#world-sizes button:not(:first-child):not(:last-child) {
+    border-radius: 0;
+}
+
+#world-sizes button:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left: none;
+}
+
+#world-sizes button.active {
+    background-color: #6501c8;
+}
+
+#world-sizes {
+    margin-right: 10px;
+}
