nicer game over screen, snakes stay further from the edge

--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ html, body {
     cursor: pointer;
     transition: 100ms background-color;
 }
+#buttons button:hover {
+    background-color: #7f849c;
+}
 
 #world-sizes button:first-child {
     border-top-right-radius: 0;
